feat(auth): finish auth logic

--- a/src/components/auth/styles.module.css
+++ b/src/components/auth/styles.module.css
@@ -15,6 +15,12 @@
   }
 }
 
+.error {
+  color: #ee171f;
+  font-size: 14px;
+  text-align: center;
+}
+
 .form {
   display: flex;
   flex-direction: column;
