--- a/src/components/header/styles.module.css
+++ b/src/components/header/styles.module.css
@@ -7,18 +7,28 @@
   max-width: 1100px;
   width: 75%;
   height: 50px;
+}
 
-  .logo {
-    display: flex;
-    align-items: center;
-    box-sizing: border-box;
-    background-color: #e62429;
-    height: 50px;
+.logo {
+  letter-spacing: -3px;
+  display: flex;
+  align-items: center;
+  box-sizing: border-box;
+  background-color: #e62429;
+  height: 50px;
 
-    font-family: 'Marvel', sans-serif;
-    font-size: 24px;
-    padding: 5px;
-    text-decoration: none;
-    color: #fff;
-  }
+  font-family: 'Marvel', sans-serif;
+  font-size: 32px;
+  padding: 5px;
+  text-decoration: none;
+  color: #fff;
+}
+
+.search-input {
+  height: 30px;
+  border-radius: 5px;
+  border: none;
+  font-size: 24px;
+  color: #fff;
+  background-color: rgb(73, 66, 66);
 }
