--- a/src/components/header/search/styles.module.css
+++ b/src/components/header/search/styles.module.css
@@ -1,9 +1,41 @@
+.search-wrapper {
+  position: relative;
+}
+
+.suggestion-list {
+  padding: 0px;
+  position: absolute;
+  transform: translate(0%, -4%);
+  display: block;
+  width: 255px;
+
+  background-color: rgb(73, 66, 66);
+  color: #fff;
+  border-radius: 5px;
+  z-index: 1;
+}
+
 .search-input {
   font-family: 'Roboto Condensed', sans-serif;
   height: 30px;
-  border-radius: 5px;
+  border-radius: 8px;
   border: none;
   font-size: 24px;
   color: #fff;
   background-color: rgb(73, 66, 66);
+}
+
+.suggestion-item {
+  display: flex;
+  gap: 10px;
+  padding: 5px;
+  justify-content: start;
+  align-items: center;
+  border-bottom: 1.5px solid rgb(54, 51, 51);
+}
+
+.hero-thumbnail {
+  border-radius: 8px;
+  width: 50px;
+  height: 35px;
 }
