--- a/src/components/header/search/styles.module.css
+++ b/src/components/header/search/styles.module.css
@@ -5,14 +5,23 @@
 .suggestion-list {
   padding: 0px;
   position: absolute;
-  transform: translate(0%, -4%);
   display: block;
   width: 255px;
+  top: 20px;
+
+  transform: scale(1);
+  transform-origin: 50% 0%;
+
+  transition: transform 0.2s ease;
 
   background-color: rgb(73, 66, 66);
   color: #fff;
   border-radius: 5px;
   z-index: 1;
+}
+
+.search-input:not(:focus) + .suggestion-list {
+  transform: scale(0);
 }
 
 .search-input {
@@ -32,10 +41,19 @@
   justify-content: start;
   align-items: center;
   border-bottom: 1.5px solid rgb(54, 51, 51);
+  cursor: pointer;
+
+  &:last-of-type {
+    border: none;
+  }
+
+  &:hover {
+    background-color: #151515;
+  }
 }
 
 .hero-thumbnail {
   border-radius: 8px;
-  width: 50px;
-  height: 35px;
+  width: 60px;
+  height: 42px;
 }
