--- a/src/components/hero-page/styles.module.css
+++ b/src/components/hero-page/styles.module.css
@@ -51,14 +51,14 @@
   margin-right: 20px;
 
   transition: transform 0.3s;
+
+  &.expanded {
+    transform: rotate(90deg);
+  }
 }
 
 #toggle-list {
   display: none;
-}
-
-#toggle-list:checked + .toggle-icon {
-  transform: rotate(90deg);
 }
 
 .featured-list {
@@ -85,6 +85,7 @@
   margin: 10px 0px;
   background-color: #2c2a2a;
   color: #fff;
+  cursor: pointer;
 }
 
 .list-item-thumbnail {
