--- a/src/components/header/auth-buttons/styles.module.css
+++ b/src/components/header/auth-buttons/styles.module.css
@@ -23,3 +23,47 @@
     }
   }
 }
+
+.profile-wrapper {
+  position: relative;
+  cursor: pointer;
+}
+
+.drop-menu {
+  position: absolute;
+  z-index: 1;
+
+  background-color: rgb(73, 66, 66);
+  color: #fff;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  width: 100px;
+  max-height: 0px;
+  border-radius: 5px;
+  overflow: hidden;
+  transform: translateX(-30%);
+
+  transition: max-height 0.2s ease;
+
+  &.show {
+    max-height: 100px;
+  }
+}
+
+.drop-menu-item {
+  cursor: pointer;
+  padding: 5px 0px;
+  width: 100%;
+  text-align: center;
+
+  &:first-child {
+    border-bottom: 1px solid #151515;
+  }
+
+  &:hover {
+    background-color: #151515;
+  }
+}
