--- a/src/components/header/search/styles.module.css
+++ b/src/components/header/search/styles.module.css
@@ -7,12 +7,12 @@
   position: absolute;
   display: block;
   width: 255px;
-  top: 20px;
+  top: 35px;
 
-  transform: scale(1);
-  transform-origin: 50% 0%;
+  max-height: 500px;
+  overflow: hidden;
 
-  transition: transform 0.2s ease;
+  transition: max-height 0.3s ease;
 
   background-color: rgb(73, 66, 66);
   color: #fff;
@@ -21,7 +21,7 @@
 }
 
 .search-input:not(:focus) + .suggestion-list {
-  transform: scale(0);
+  max-height: 0px;
 }
 
 .search-input {
