--- a/src/styles.css
+++ b/src/styles.css
@@ -21,3 +21,10 @@ a {
     width: 75%;
   }
 }
+
+::-webkit-scrollbar {
+  /* position: absolute; */
+  scrollbar-color: #e62429;
+  /* scrollbar-width: 100px; */
+  /* z-index: 10; */
+}
