--- a/src/components/auth/styles.module.css
+++ b/src/components/auth/styles.module.css
@@ -1,5 +1,6 @@
 .wrapper {
   width: 500px;
+  max-width: 90%;
   height: 600px;
   background-color: #202020;
   border-radius: 25px;
@@ -21,6 +22,10 @@
   text-align: center;
 }
 
+.heading {
+  font-size: clamp(32px, 6vw, 48px);
+}
+
 .form {
   display: flex;
   flex-direction: column;
@@ -33,13 +38,22 @@
 }
 
 .input {
-  width: 300px;
+  width: clamp(200px, 60vw, 300px);
   height: 20px;
   font-size: 20px;
 }
 
 .caption {
   font-size: 18px;
+}
+
+.caption-link {
+  color: #ee171f;
+
+  &:hover {
+    color: #e26367;
+    cursor: pointer;
+  }
 }
 
 .submit {
