--- a/src/components/header/styles.module.css
+++ b/src/components/header/styles.module.css
@@ -3,7 +3,7 @@
   justify-content: space-between;
   align-items: center;
 
-  background-color: #151515;
+  background-color: var(--marvel-gray-color);
   width: clamp(300px, 90%, 1100px);
   height: 50px;
 }
@@ -17,7 +17,7 @@
   justify-content: center;
   text-align: center;
   box-sizing: border-box;
-  background-color: #e62429;
+  background-color: var(--marvel-red-color);
   height: 50px;
   width: clamp(80px, 25%, 150px);
   font-size: clamp(20px, 3vw, 24px);
@@ -27,4 +27,49 @@
 
   @media (width <= 600px) {
   }
+}
+
+.theme-wrapper {
+  display: flex;
+}
+
+.theme-label {
+  position: relative;
+  cursor: pointer;
+  width: 80px;
+  height: 30px;
+  border-radius: 30px;
+  background-color: var(--marvel-gray-color);
+  border: 2px solid var(--marvel-gray-color);
+}
+
+.theme-icon {
+  display: inline-block;
+  width: 32px;
+  height: 32px;
+}
+
+.circle {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: gray;
+  left: 0px;
+  right: 50px;
+
+  transition:
+    left 0.3s ease-in-out,
+    right 0.3s ease-in-out,
+    background-color 0.3s ease-in-out;
+
+  &:has(+ #theme[data-theme='dark']) {
+    left: 50px;
+    right: 0px;
+    background-color: var(--marvel-red-color);
+  }
+}
+
+#theme {
+  display: none;
 }
