--- a/src/components/hero-page/styles.module.css
+++ b/src/components/hero-page/styles.module.css
@@ -72,7 +72,7 @@
   overflow: hidden;
   max-height: 2000px;
 
-  background-color: #151515;
+  background-color: var(--marvel-gray-color);
 
   transition: max-height 0.3s ease-in-out;
 
