--- a/src/components/heroes/styles.module.css
+++ b/src/components/heroes/styles.module.css
@@ -7,7 +7,7 @@
 
 .hero-container {
   position: relative;
-  /* background-color: #151515; */
+  /* background-color: var(--marvel-gray-color); */
   cursor: pointer;
   width: 140px;
   color: #fff;
@@ -35,7 +35,7 @@
 
 .name-wrapper {
   flex-grow: 1;
-  background-color: #151515;
+  background-color: var(--marvel-gray-color);
 
   display: flex;
 
