--- a/src/components/user-page/styles.module.css
+++ b/src/components/user-page/styles.module.css
@@ -32,7 +32,7 @@
 
   &:checked + .display-button {
     color: #fff;
-    background-color: #151515;
+    background-color: var(--marvel-gray-color);
 
     &:hover {
       background-color: rgb(73, 66, 66);
@@ -56,7 +56,7 @@
   justify-content: flex-start;
   align-items: center;
   gap: 20px;
-  border-bottom: 1px solid #151515;
+  border-bottom: 1px solid var(--marvel-gray-color);
   padding: 5px;
   cursor: pointer;
 
