--- a/src/components/header/styles.module.css
+++ b/src/components/header/styles.module.css
@@ -1,10 +1,16 @@
+.header-wrapper {
+  width: clamp(300px, 90%, 1100px);
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
 
   background-color: var(--marvel-gray-color);
-  width: clamp(300px, 90%, 1100px);
   height: 50px;
 }
 
@@ -31,14 +37,20 @@
 
 .theme-wrapper {
   display: flex;
+  align-items: center;
+  align-self: flex-end;
+
+  --label-width: 50px;
+  --label-height: 20px;
+  --circle-shift: calc(var(--label-width) - var(--label-height));
 }
 
 .theme-label {
   position: relative;
   cursor: pointer;
-  width: 80px;
-  height: 30px;
-  border-radius: 30px;
+  width: var(--label-width);
+  height: var(--label-height);
+  border-radius: var(--label-height);
   background-color: var(--marvel-gray-color);
   border: 2px solid var(--marvel-gray-color);
 }
@@ -51,12 +63,12 @@
 
 .circle {
   position: absolute;
-  width: 30px;
-  height: 30px;
+  width: var(--label-height);
+  height: var(--label-height);
   border-radius: 50%;
   background-color: gray;
   left: 0px;
-  right: 50px;
+  right: var(--circle-shift);
 
   transition:
     left 0.3s ease-in-out,
@@ -64,7 +76,7 @@
     background-color 0.3s ease-in-out;
 
   &:has(+ #theme[data-theme='dark']) {
-    left: 50px;
+    left: var(--circle-shift);
     right: 0px;
     background-color: var(--marvel-red-color);
   }
