--- a/src/components/header/styles.module.css
+++ b/src/components/header/styles.module.css
@@ -3,6 +3,11 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
+
+  @media (width <= 670px) {
+    top: 0;
+    width: 100vw;
+  }
 }
 
 .header {
@@ -30,9 +35,6 @@
   padding: 5px;
   text-decoration: none;
   color: #fff;
-
-  @media (width <= 600px) {
-  }
 }
 
 .theme-wrapper {
@@ -43,6 +45,10 @@
   --label-width: 50px;
   --label-height: 20px;
   --circle-shift: calc(var(--label-width) - var(--label-height));
+
+  @media (width <= 670px) {
+    margin-right: 40px;
+  }
 }
 
 .theme-label {
