--- a/src/styles.css
+++ b/src/styles.css
@@ -6,6 +6,7 @@ a {
 }
 
 body {
+  margin: 0 10px;
   --marvel-red-color: #e62429;
   --marvel-gray-color: #151515;
 }
@@ -24,7 +25,6 @@ body[data-theme='light'] {
   display: flex;
   flex-direction: column;
   gap: 40px;
-  justify-content: center;
   align-items: center;
 
   & > * {
@@ -34,5 +34,9 @@ body[data-theme='light'] {
   main {
     max-width: 1100px;
     width: 90%;
+
+    @media (width <= 670px) {
+      width: 100%;
+    }
   }
 }
