fix(word-break): adjust hero-name display

--- a/src/components/heroes/styles.module.css
+++ b/src/components/heroes/styles.module.css
@@ -79,7 +79,7 @@
   text-overflow: clip;
   overflow: hidden;
   overflow-wrap: break-word;
-  word-break: break-all;
+  /* word-break: break-all; */
   height: 90px;
 }
 
