fix: add error handling to not found hero page, and redirect from user page for guests

--- a/src/components/hero-page/styles.module.css
+++ b/src/components/hero-page/styles.module.css
@@ -99,3 +99,12 @@
 .list-item-title {
   padding: 5px;
 }
+
+.error-link {
+  color: #ee171f;
+
+  &:hover {
+    color: #e26367;
+    cursor: pointer;
+  }
+}
